removed bookmark this page links

--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/PatientsLoginPage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/PatientsLoginPage.html
@@ -30,10 +30,7 @@
 <body>
 <wicket:extend>
 
-    <h1 style="display:inline">Patient Log-In</h1>&nbsp;&nbsp;&nbsp;
- <span style="margin-left:400px;"><a href="javascript:bookmarksite('RaDaR', 'http://www.renal-test.org/patients')">Bookmark
-     this page</a>
-</span>
+    <h1 style="display:inline">Patient Log-In</h1>
 
     <p>Please enter your username and password</p>
 
