--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/ProfessionalsLoginPage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/ProfessionalsLoginPage.html
@@ -33,14 +33,9 @@
 
     <div id="ctl00_ContentPlaceHolder1_pnlLogIn">
 
-        <h1 style="display:inline;">
-            Health Professional Log In</h1>&nbsp;&nbsp;&nbsp;
+        <h1 style="display:inline;">Health Professional Log In</h1>
 
-        <p>Please enter your username and password
-            <span style="margin-left:400px;"><a
-                    href="javascript:bookmarksite('RaDaR', 'http://www.renalradar.org/professionals')">Bookmark
-                this page</a></span>
-        </p>
+        <p>Please enter your username and password</p>
 
         <form wicket:id="form">
             <table cellpadding="8" class="style2">
