set new patient (radar) renal unit dropdown to required with visual notification (same as sex, renal diagnosis)

--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/panels/DemographicsPanel.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/panels/DemographicsPanel.html
@@ -221,10 +221,10 @@
                     </td>
                 </tr>
                 <tr>
-                    <td>Renal Unit</td>
+                    <td>Renal Unit </td>
                     <td>
                         <select wicket:id="renalUnit"/>
-                        &nbsp;
+                        &nbsp;<span wicket:id="renalUnitFeedbackIndicator"></span>
                     </td>
                 </tr>
 
