--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/panels/generic/GenericDemographicsPanel.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/panels/generic/GenericDemographicsPanel.html
@@ -192,7 +192,7 @@
             <td><input wicket:id="indiaId" type="text"/></td>
         </tr>
         <tr>
-            <td><label>Renal Unit</label> </td>
+            <td><label>Renal Unit</label> <strong><span wicket:id="renalUnitFeedbackIndicator"></span></strong></td>
             <td>
                 <select wicket:id="renalUnit"/>
             </td>
