added extra link to rare renal website

--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/PatientsLoginPage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/PatientsLoginPage.html
@@ -32,7 +32,9 @@
 
     <h1 style="display:inline">Access Unavailable</h1>
 
-    <p>Access to RADAR for Patients is currently unavailable</p>
+    <p>Access to RADAR for Patients is currently unavailable.</p>
+
+    <p>Disease information can be found on the <a href="http://rarerenal.org/patient-information/">Rare Renal</a> website.</p>
 
 
 </wicket:extend>
