Card #451 - Patient Feedback fixes to properly differentiate between BULK messages (not just gettype()=null), white background for .maincontainer

--- a/patientview-parent/patientview/src/main/webapp/error.html
+++ b/patientview-parent/patientview/src/main/webapp/error.html
@@ -55,7 +55,7 @@
     </div><!-- /navbar-inner -->
 </div>
 
-<div class="container">
+<div class="container maincontainer">
 
 <ul class="nav nav-pills">
     <li ><a href="/index.do">Home</a></li>
