Card #299 Radar: wording for login, register, hide forgotten password and registration forms

--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/HomePage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/HomePage.html
@@ -44,7 +44,7 @@
 
                 <p>If you need patient information sheets and consent forms you can find them <a href="http://rarerenal.org/radar-registry/criteria-and-consent/" target="_blank">here</a>.</p>
 
-                <p>You can then log-in to RaDaR as a RaDaR/RPV Administrator. If this is your first visit you will need</p>
+                <p>You can then log-in to RaDaR as a User. If this is your first visit you will need</p>
 
                 <p>to <a href="registration/professional">register as a user</a>.</p>
 
