--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/ProfessionalsLoginPage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/login/ProfessionalsLoginPage.html
@@ -70,7 +70,9 @@
         </form>
 
         <p>
-            <a href="#" wicket:id="forgotPasswordLink">Forgotten your password?</a>
+            If you have forgotten your password please e-mail
+            <a href="mailto:Fiona.Braddon@nhs.net">Fiona.Braddon@nhs.net</a>
+            <a href="#" wicket:id="forgotPasswordLink" class="hidden">Forgotten your password?</a>
         </p>
 
 
