--- a/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/regisration/ProfessionalRegistrationPage.html
+++ b/patientview-parent/radar/src/main/java/org/patientview/radar/web/pages/regisration/ProfessionalRegistrationPage.html
@@ -31,26 +31,24 @@
 
 <wicket:extend>
     <div>
+        <h1>Health Professional Registration</h1>        
+        <p>To register please e-mail your details to 
+            <a href="mailto:Fiona.Braddon@nhs.net">Fiona.Braddon@nhs.net</a>
+        </p>
+    </div>
 
-        <h1>
-            Health Professional
-            Registration</h1>
+    <div class="hidden">
+        <h1>Health Professional Registration</h1>
 
-        <p>
-            To register please enter your name, NHS email address and Centre below. </p>
-
-        <p>
-            Once
-            validated you will be given a username and password to enter the site</p>
+        <p>To register please enter your name, NHS email address and Centre below. </p>
+        <p>Once validated you will be given a username and password to enter the site</p>
 
         <form wicket:id="form">
             <fieldset style="padding:10px; width:760px;">
                 <table cellpadding="4" class="style1">
                     <tbody>
                     <tr>
-                        <td style="width:140px;">
-                            <label>Surname:</label>
-                        </td>
+                        <td style="width:140px;"><label>Surname:</label></td>
                         <td>
                             <input wicket:id="surname" type="text" style="width:230px;"/>
                             <span class="feedback" wicket:id="surnameFeedback"></span>
@@ -68,9 +66,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            <label>Title:</label>
-                        </td>
+                        <td><label>Title:</label></td>
                         <td>
                             <select wicket:id="title">
                             </select>
@@ -79,9 +75,7 @@
                         </td>
                     </tr>
                     <tr>
-                        <td>
-                            Geographic area
-                        </td>
+                        <td>Geographic area</td>
                         <td>
                             <select wicket:id="areaDropDown">
                             </select>
@@ -98,7 +92,6 @@
                             <span wicket:id="gmcFeedbackIndicator"></span>
                         </td>
                     </tr>
-
                     <tr wicket:id="roleContainer">
                         <td>
                             <label>Role:</label>
@@ -109,11 +102,9 @@
                             <span wicket:id="roleFeedbackIndicator"></span>
                         </td>
                     </tr>
-
                     <tr wicket:id="emailContainer">
                         <td>
-                            <label>Email
-                                Address</label>
+                            <label>Email Address</label>
                         </td>
                         <td>
                             <input wicket:id="email" type="text" style="width:230px;"/>
@@ -121,7 +112,6 @@
                             <span wicket:id="emailFeedbackIndicator"></span>
                         </td>
                     </tr>
-
                     <tr wicket:id="phoneContainer">
                         <td>
                             Telephone number:
@@ -161,20 +151,15 @@
                             <input wicket:id="securityQuestionAnsw" type="hidden">
                         </td>
                     </tr>
-
-
                     <tr>
-                        <td>
-                            &nbsp;</td>
-                        <td>
-                            &nbsp;</td>
+                        <td>&nbsp;</td>
+                        <td>&nbsp;</td>
                     </tr>
                     <tr>
                         <td>
                             <button wicket:id="submit" type="button" value="Register" class="inline">
                                 <label wicket:id="submitLabel">Continue</label>
                             </button>
-
                         </td>
                         <td>
                             <span class="successMessage" wicket:id="successMessage"></span>
@@ -184,11 +169,9 @@
                     </tr>
                     </tbody>
                 </table>
-                &nbsp;</fieldset>
+            </fieldset>
         </form>
     </div>
-
 </wicket:extend>
-
 </body>
 </html>
